Add statistical analysis on grafted and nongrafted regions

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -838,6 +838,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(len(df[\"tag\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ischemic_territories = []\n",
     "nonischemic_territories = []\n",
     "\n",
@@ -845,6 +854,15 @@
     "ischemic_median_B = []\n",
     "nonischemic_median_A = []\n",
     "nonischemic_median_B = []\n",
+    "\n",
+    "nongrafted_median_A = []\n",
+    "nongrafted_median_B = []\n",
+    "\n",
+    "grafted_median_A = []\n",
+    "grafted_median_B = []\n",
+    "\n",
+    "nonischemic_grafted_A = []\n",
+    "nonischemic_grafted_B = []\n",
     "\n",
     "for id in patient_ids:\n",
     "    tags = list(df[df[\"patient_id\"] == id][\"tag\"])\n",
@@ -856,6 +874,7 @@
     "    for tag in tags:\n",
     "        median_absMBF_A = np.median(np.concatenate(df[(df[\"patient_id\"] == id) & (df[\"tag\"] == tag)][\"absMBF_A\"].values))\n",
     "        median_absMBF_B = np.median(np.concatenate(df[(df[\"patient_id\"] == id) & (df[\"tag\"] == tag)][\"absMBF_B\"].values))\n",
+    "        \n",
     "        if df[(df[\"patient_id\"] == id) & (df[\"tag\"] == tag)][\"is_ischemic\"].iloc[0] == True:\n",
     "            ischemic_median_A.append(median_absMBF_A)\n",
     "            ischemic_median_B.append(median_absMBF_B)\n",
@@ -870,6 +889,17 @@
     "                                        \"tag\": tag,\n",
     "                                        \"median_absMBF_A\": median_absMBF_A,\n",
     "                                        \"median_absMBF_B\": median_absMBF_B})\"\"\"\n",
+    "            if tag not in [\"Nongrafted\", \"Nongrafted-Stenosis\"]:\n",
+    "                nonischemic_grafted_A.append(median_absMBF_A)\n",
+    "                nonischemic_grafted_B.append(median_absMBF_B)\n",
+    "        \n",
+    "        if tag in [\"Nongrafted\", \"Nongrafted-Stenosis\"]:\n",
+    "            nongrafted_median_A.append(median_absMBF_A)\n",
+    "            nongrafted_median_B.append(median_absMBF_B)\n",
+    "        else:\n",
+    "            grafted_median_A.append(median_absMBF_A)\n",
+    "            grafted_median_B.append(median_absMBF_B)\n",
+    "\n",
     "\n",
     "#ischemic_territories = pd.DataFrame(ischemic_territories)\n",
     "#nonischemic_territories = pd.DataFrame(nonischemic_territories)"
@@ -881,7 +911,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nonischemic_median_A"
+    "print(len(grafted_median_A))"
    ]
   },
   {
@@ -894,6 +924,74 @@
     "print(\"Wilcoxon test statistics: \", w_value)\n",
     "print(\"p-value: \", p_value)\n",
     "print(\"number of datapoints:\", len(ischemic_median_A))\n",
+    "\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Reject the null hypothesis: There is a significant difference between the two samples.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: There is no significant difference between the two samples.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_value, p_value = wilcoxon(nonischemic_median_A, nonischemic_median_B)\n",
+    "print(\"Wilcoxon test statistics: \", w_value)\n",
+    "print(\"p-value: \", p_value)\n",
+    "print(\"number of datapoints:\", len(ischemic_median_A))\n",
+    "\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Reject the null hypothesis: There is a significant difference between the two samples.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: There is no significant difference between the two samples.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_value, p_value = wilcoxon(nongrafted_median_A, nongrafted_median_B)\n",
+    "print(\"Wilcoxon test statistics: \", w_value)\n",
+    "print(\"p-value: \", p_value)\n",
+    "print(\"number of datapoints:\", len(nongrafted_median_A))\n",
+    "\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Reject the null hypothesis: There is a significant difference between the two samples.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: There is no significant difference between the two samples.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_value, p_value = wilcoxon(grafted_median_A, grafted_median_B)\n",
+    "print(\"Wilcoxon test statistics: \", w_value)\n",
+    "print(\"p-value: \", p_value)\n",
+    "print(\"number of datapoints:\", len(grafted_median_A))\n",
+    "\n",
+    "if p_value < 0.05:\n",
+    "    print(\"Reject the null hypothesis: There is a significant difference between the two samples.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: There is no significant difference between the two samples.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_value, p_value = wilcoxon(nonischemic_grafted_A, nonischemic_grafted_B)\n",
+    "print(\"Wilcoxon test statistics: \", w_value)\n",
+    "print(\"p-value: \", p_value)\n",
+    "print(\"number of datapoints:\", len(nonischemic_grafted_A))\n",
     "\n",
     "if p_value < 0.05:\n",
     "    print(\"Reject the null hypothesis: There is a significant difference between the two samples.\")\n",
