Add scatter and regression plots

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import kruskal, wilcoxon\n",
+    "from scipy.stats import kruskal, wilcoxon, linregress\n",
     "from scipy.ndimage import gaussian_filter\n",
     "from utilities import ReadVTUFile, ThresholdInBetween, ThresholdByUpper, LargestConnectedRegion, WriteVTUFile\n",
     "from vtk.util.numpy_support import vtk_to_numpy, numpy_to_vtk"
@@ -1023,6 +1023,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Scatter Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "plt.scatter(ischemic_median_A, ischemic_median_B, marker = 'p', color = 'fuchsia', label = 'Ischemic Grafted')\n",
+    "plt.scatter(nonischemic_grafted_A, nonischemic_grafted_B, marker = 'o', color = 'indigo', label = \"Nonischemic Grafted\")\n",
+    "plt.scatter(nongrafted_median_A, nongrafted_median_B, marker = '^', color = 'sandybrown', label = \"Nongrafted\")\n",
+    "\n",
+    "x_fit = np.linspace(min(grafted_median_A), max(grafted_median_A), 100)\n",
+    "plt.plot(x_fit, x_fit, 'k-', label = \"x = y line\")\n",
+    "\n",
+    "slope, intercept, _, _, _ = linregress(nonischemic_median_A, nonischemic_median_B)\n",
+    "y_fit = slope * x_fit + intercept\n",
+    "plt.plot(x_fit, y_fit, 'r--', label= \"Nonischemic Trend Line\")\n",
+    "\n",
+    "slope, intercept, _, _, _ = linregress(ischemic_median_A, ischemic_median_B)\n",
+    "x_fit = np.linspace(min(ischemic_median_A), max(ischemic_median_A), 100)\n",
+    "y_fit = slope * x_fit + intercept\n",
+    "plt.plot(x_fit, y_fit, 'c--', label= \"Ischemic Trend Line\")\n",
+    "\n",
+    "\n",
+    "plt.plot()\n",
+    "\n",
+    "plt.xlabel(\"Pre-CABG Median Regional MBG (mL/min/100mL)\", fontsize = 12)\n",
+    "plt.ylabel(\"Post-CABG Median Regional MBF (mL/min/100mL)\", fontsize = 12)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Thresholding on index MBF"
    ]
   },
@@ -1332,6 +1372,13 @@
     "SVG_volume_A = np.array(SVG_volume_A)\n",
     "SVG_volume_B = np.array(SVG_volume_B)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Box Plot"
    ]
   },
   {
