--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -1334,6 +1334,8 @@
     "SVG_volume_A = []\n",
     "SVG_volume_B = []\n",
     "\n",
+    "Removed_Cases_volume = Removed_Cases + ['SU03']\n",
+    "\n",
     "for patient_id in patient_ids:\n",
     "    if patient_id in Removed_Cases_volume: \n",
     "        continue\n",
@@ -1477,6 +1479,13 @@
     "else:\n",
     "    print(\"There is a difference—at least one graft type shows a significantly different median improvement.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
