Ischemia detection by thresholding

--- a/CABG/MBFTools/PolarPlotGradient.ipynb
+++ b/CABG/MBFTools/PolarPlotGradient.ipynb
@@ -2,31 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import vtk\n",
     "import numpy as np\n",
-    "from utilities import ReadVTPFile, WriteVTPFile\n",
+    "from utilities import ReadVTPFile, WriteVTPFile, LargestConnectedRegion, ThresholdInBetween\n",
     "from vtk.util.numpy_support import vtk_to_numpy, numpy_to_vtk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU04A/PolarMap\"\n",
+    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU13B/PolarMap\"\n",
     "polar_map = os.path.join(InputFolder, \"MyocardiumPolarMap.vtp\")\n",
     "PolarMap = ReadVTPFile(polar_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MBFPolarValue = vtk_to_numpy(PolarMap.GetPointData().GetArray(\"MBFProfile\"))\n",
+    "ref_MBF = np.mean(MBFPolarValue)\n",
+    "IndexMBF = MBFPolarValue/ref_MBF\n",
+    "ischemia_mask = IndexMBF < 0.8\n",
+    "\n",
+    "ischemia_array = numpy_to_vtk(ischemia_mask.astype(np.uint8), deep=True)\n",
+    "ischemia_array.SetName(\"IsIschemic\")\n",
+    "PolarMap.GetPointData().AddArray(ischemia_array)\n",
+    "\n",
+    "ofile = os.path.join(InputFolder, \"MyocardiumPolarMapIschemic.vtp\")\n",
+    "WriteVTPFile(ofile, PolarMap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def robust_mode(data, bins=50):\n",
+    "    counts, bin_edges = np.histogram(data, bins=bins)\n",
+    "    max_bin_index = np.argmax(counts)\n",
+    "    mode_value = (bin_edges[max_bin_index] + bin_edges[max_bin_index + 1]) / 2\n",
+    "    return mode_value\n",
+    "\n",
+    "\n",
+    "HealthyMyo = LargestConnectedRegion(ThresholdInBetween(PolarMap, \"MBFProfile\", np.percentile(MBFPolarValue,10), np.percentile(MBFPolarValue,90)))\n",
+    "ScalarArray_healthy = vtk_to_numpy(HealthyMyo.GetPointData().GetArray(\"MBFProfile\"))\n",
+    "\n",
+    "IQR = np.percentile(ScalarArray_healthy, 75) - np.percentile(ScalarArray_healthy, 25)\n",
+    "bin_width = 2*IQR/(len(ScalarArray_healthy))**(1/3)\n",
+    "MBF_range = np.max(ScalarArray_healthy) - np.min(ScalarArray_healthy)\n",
+    "bins = int(MBF_range/bin_width)\n",
+    "ref_MBF = robust_mode(ScalarArray_healthy, bins)\n",
+    "\n",
+    "IndexMBF = MBFPolarValue/ref_MBF\n",
+    "ischemia_mask = IndexMBF < 0.8\n",
+    "\n",
+    "ischemia_array = numpy_to_vtk(ischemia_mask.astype(np.uint8), deep=True)\n",
+    "ischemia_array.SetName(\"IsIschemic\")\n",
+    "PolarMap.GetPointData().AddArray(ischemia_array)\n",
+    "\n",
+    "ofile = os.path.join(InputFolder, \"MyocardiumPolarMapIschemic1.vtp\")\n",
+    "WriteVTPFile(ofile, PolarMap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
