--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -139,7 +139,7 @@
     "        ref_MBF = np.percentile(ScalarArray_healthy, 75)\n",
     "\n",
     "    IndexMBFArray = ScalarArray/ref_MBF\n",
-    "    IndexMBFArray = gaussian_filter(IndexMBFArray, sigma=1)\n",
+    "    #IndexMBFArray = gaussian_filter(IndexMBFArray, sigma=1)\n",
     "    IndexMBF = numpy_to_vtk(IndexMBFArray)\n",
     "    IndexMBF.SetName(\"IndexMBF\")\n",
     "    MBF.GetPointData().AddArray(IndexMBF)\n",
@@ -1079,7 +1079,7 @@
     "    if patient_id in Removed_Cases_volume: \n",
     "        continue\n",
     "    \n",
-    "    normalization_method = \"mode\"\n",
+    "    normalization_method = \"classic\"\n",
     "    for file in VTUFiles:\n",
     "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
     "            MBF_A = Normalize(ReadVTUFile(file), normalization_method)\n",
