Add territory-based MBF analysis pre and post-CABG

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -20,6 +20,7 @@
    "source": [
     "import glob\n",
     "import os\n",
+    "import vtk\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -217,7 +218,8 @@
     "\n",
     "    ScalarData = vtk_to_numpy(VolumeA.GetPointData().GetArray(ScalarArray))\n",
     "    ScalarData_Mapped = numpy_to_vtk(MapNongrafted(meanA, meanB, stdA, stdB, ScalarData))\n",
-    "    ScalarData_Mapped.SetName(\"MappedScalar\")\n",
+    "    MappedScalarArrayName = \"MappedScalar\"\n",
+    "    ScalarData_Mapped.SetName(MappedScalarArrayName)\n",
     "    VolumeA.GetPointData().AddArray(ScalarData_Mapped)\n",
     "\n",
     "    return VolumeA\n",
@@ -229,7 +231,8 @@
     "            ScalarArray = arrayname_\n",
     "\n",
     "    ScalarData = vtk_to_numpy(Volume.GetPointData().GetArray(ScalarArray))\n",
-    "    return np.median(ScalarData)\n"
+    "    return np.median(ScalarData)\n",
+    "\n"
    ]
   },
   {
@@ -318,9 +321,9 @@
     "    \n",
     "    \n",
     "    #BoxPlot(data)\n",
-    "    #ViolinPlot(data)\n",
-    "    #print(\"--- Mapping Results:\")\n",
-    "    #ViolinPlot(dataMapped)\n"
+    "    ViolinPlot(data)\n",
+    "    print(\"--- Mapping Results:\")\n",
+    "    ViolinPlot(dataMapped)\n"
    ]
   },
   {
@@ -415,8 +418,9 @@
     "\n",
     "        elif threshold2 < mbf_median <= threshold1:\n",
     "            item[\"ischemic_grade\"] = 1\n",
-    "            item[\"is_ischemic\"] = False\n",
+    "            item[\"is_ischemic\"] = True\n",
     "            print(\"10-20% drop\", item[\"patient_id\"], item[\"tag\"])\n",
+    "            count_ischemic += 1\n",
     "            count_10 += 1\n",
     "\n",
     "        elif threshold3 < mbf_median <= threshold2:\n",
@@ -1481,10 +1485,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Territory-based analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def TerritorySelection(tag):\n",
+    "    if any(sub in tag.lower() for sub in [\"lcx\", \"om\", \"intermedius\"]):\n",
+    "        territory = \"LCx\"\n",
+    "    elif any(sub in tag.lower() for sub in [\"lad\", \"diag\"]):\n",
+    "        territory = \"LAD\"\n",
+    "    elif any(sub in tag.lower() for sub in [\"pda\", \"pl\"]):\n",
+    "        territory = \"RCA\"\n",
+    "    else:\n",
+    "        print(f\"{tag} was not assigned to any specific territory.\")\n",
+    "        territory = None\n",
+    "    \n",
+    "    return territory\n",
+    "\n",
+    "def TerritoryAssignment(MBF, InputLabels, ScalarArray):\n",
+    "    \n",
+    "    Territories = {\"LAD\":None, \"LCx\":None, \"RCA\":None}\n",
+    "    Territory_ids = {\"LAD\":[], \"LCx\":[], \"RCA\":[]}\n",
+    "    with open(InputLabels, \"r\") as ifile:\n",
+    "        for i, LINE in enumerate(ifile):\n",
+    "            if i == 0: \n",
+    "                continue\n",
+    "            line = LINE.strip().split()\n",
+    "            label = line[1]\n",
+    "            id_value = int(line[0])\n",
+    "\n",
+    "            \n",
+    "            territory_tag = TerritorySelection(label)\n",
+    "            if territory_tag is not None:\n",
+    "                Territory_ids[territory_tag].append(id_value)\n",
+    "    \n",
+    "    for tag, ids in Territory_ids.items():\n",
+    "        TerritoryAppend = vtk.vtkAppendFilter()\n",
+    "        for id in ids:\n",
+    "            territory = ThresholdInBetween(MBF, \"TerritoryMaps\", id, id)\n",
+    "            TerritoryAppend.AddInputData(territory)\n",
+    "        TerritoryAppend.Update()\n",
+    "        Territory = TerritoryAppend.GetOutput()\n",
+    "        MBFArray = vtk_to_numpy(Territory.GetPointData().GetArray(ScalarArray))\n",
+    "        Territories[tag] = MBFArray\n",
+    "\n",
+    "    return Territories\n",
+    "\n",
+    "\n",
+    "MappedVTUFiles = glob.glob(f\"{opath}/*.vtu\")\n",
+    "\n",
+    "LAD_MBF_A = []\n",
+    "LAD_MBF_B = []\n",
+    "\n",
+    "LCx_MBF_A = []\n",
+    "LCx_MBF_B = []\n",
+    "\n",
+    "RCA_MBF_A = []\n",
+    "RCA_MBF_B = []\n",
+    "Removed_Cases_ = Removed_Cases + [\"VA13\"]\n",
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases_: \n",
+    "        continue\n",
+    "    print(patient_id)\n",
+    "\n",
+    "    for file in TerritoryLabels:\n",
+    "        if patient_id in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            LabelFile = file\n",
+    "\n",
+    "    for file in MappedVTUFiles:\n",
+    "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_A = ReadVTUFile(file)\n",
+    "    for file in VTUFiles:\n",
+    "        if f\"{patient_id}B\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_B = ReadVTUFile(file)\n",
+    "    \n",
+    "    for i in range(MBF_B.GetPointData().GetNumberOfArrays()):\n",
+    "        arrayname_ = MBF_B.GetPointData().GetArrayName(i)\n",
+    "        if 'scalars' in arrayname_.lower():\n",
+    "            ScalarArray_B = arrayname_\n",
+    "    \n",
+    "    MappedScalarArrayName = \"MappedScalar\"\n",
+    "    territory_A = TerritoryAssignment(MBF_A, LabelFile, MappedScalarArrayName)\n",
+    "    territory_B = TerritoryAssignment(MBF_B, LabelFile, ScalarArray_B)\n",
+    "\n",
+    "    LAD_MBF_A.append(territory_A[\"LAD\"])\n",
+    "    LAD_MBF_B.append(territory_B[\"LAD\"])\n",
+    "\n",
+    "    LCx_MBF_A.append(territory_A[\"LCx\"])\n",
+    "    LCx_MBF_B.append(territory_B[\"LCx\"])\n",
+    "\n",
+    "    RCA_MBF_A.append(territory_A[\"RCA\"])\n",
+    "    RCA_MBF_B.append(territory_B[\"RCA\"])\n",
+    "\n",
+    "LAD_MBF_A = np.concatenate(LAD_MBF_A)\n",
+    "LAD_MBF_B = np.concatenate(LAD_MBF_B)\n",
+    "\n",
+    "LCx_MBF_A = np.concatenate(LCx_MBF_A)\n",
+    "LCx_MBF_B = np.concatenate(LCx_MBF_B)\n",
+    "\n",
+    "RCA_MBF_A = np.concatenate(RCA_MBF_A)\n",
+    "RCA_MBF_B = np.concatenate(RCA_MBF_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "df_A = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LAD_MBF_A, LCx_MBF_A, RCA_MBF_A]),\n",
+    "    'Territory': [\"LAD\"] * len(LAD_MBF_A) +\n",
+    "                [\"LCx\"] * len(LCx_MBF_A) +\n",
+    "                [\"RCA\"] * len(RCA_MBF_A),\n",
+    "    'Type': ['Pre-CABG'] * (len(LAD_MBF_A) + len(LCx_MBF_A) + len(RCA_MBF_A))\n",
+    "})\n",
+    "\n",
+    "df_B = pd.DataFrame({\n",
+    "    'MBF': np.concatenate([LAD_MBF_B, LCx_MBF_B, RCA_MBF_B]),\n",
+    "    'Territory': [\"LAD\"] * len(LAD_MBF_B) +\n",
+    "                [\"LCx\"] * len(LCx_MBF_B) +\n",
+    "                [\"RCA\"] * len(RCA_MBF_B),\n",
+    "    'Type': ['Post-CABG'] * (len(LAD_MBF_B) + len(LCx_MBF_B) + len(RCA_MBF_B))\n",
+    "})\n",
+    "\n",
+    "df_long = pd.concat([df_A, df_B], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 5))\n",
+    "ax = sns.boxplot(x='Territory', y='MBF', hue='Type', data= df_long, showfliers=False, width = 0.4, palette={'Pre-CABG':'plum', 'Post-CABG':'gold'})\n",
+    "\n",
+    "ax.set_ylabel(\"Absolute MBF (mL/min/100mL)\", fontsize = 15)\n",
+    "ax.tick_params(axis='x', rotation=0, labelsize=11)\n",
+    "ax.legend(loc = 'upper left')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cumulative Power"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
