Add CDF of the MBF

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -45,7 +45,15 @@
     "TerritoryLabels = sorted(glob.glob(f\"{path}/*.dat\"))\n",
     "print(VTUFiles)\n",
     "\n",
-    "PatientMetadata = pd.read_excel(metadata[0], dtype={'column_name': str})\n",
+    "PatientMetadata = pd.read_excel(metadata[0], dtype={'column_name': str})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(PatientMetadata)"
    ]
   },
@@ -288,6 +296,7 @@
     "    std_B = np.std(array_B)\n",
     "    MBF_A_mapped = Map3DVolume(mean_A, mean_B, std_A, std_B, MBF_A)\n",
     "    WriteVTUFile(os.path.join(opath,f\"{patient_id}A_MBF_Mapped.vtu\"), MBF_A_mapped)\n",
+    "    WriteVTUFile(os.path.join(opath,f\"{patient_id}B_MBF_Mapped.vtu\"), MBF_B)\n",
     "    #data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
     "    #data = pd.concat([data, data_], ignore_index=True)\n",
     "    # Mapping\n",
@@ -321,9 +330,9 @@
     "    \n",
     "    \n",
     "    #BoxPlot(data)\n",
-    "    ViolinPlot(data)\n",
-    "    print(\"--- Mapping Results:\")\n",
-    "    ViolinPlot(dataMapped)\n"
+    "    #ViolinPlot(data)\n",
+    "    #print(\"--- Mapping Results:\")\n",
+    "    #ViolinPlot(dataMapped)\n"
    ]
   },
   {
@@ -1055,8 +1064,6 @@
     "plt.plot(x_fit, y_fit, 'c--', label= \"Ischemic Trend Line\")\n",
     "\n",
     "\n",
-    "plt.plot()\n",
-    "\n",
     "plt.xlabel(\"Pre-CABG Median Regional MBG (mL/min/100mL)\", fontsize = 12)\n",
     "plt.ylabel(\"Post-CABG Median Regional MBF (mL/min/100mL)\", fontsize = 12)\n",
     "plt.legend()\n",
@@ -1642,13 +1649,162 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cumulative Power"
+    "# Cumulative Distribution Function"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def cumdist(Array):\n",
+    "    array = np.sort(Array)\n",
+    "    threshold = 0.8 \n",
+    "    cdf = np.arange(1, len(array) + 1)/len(array) * 100\n",
+    "    idx = np.searchsorted(array, threshold, side='right') - 1\n",
+    "    cdf_at_threshold = cdf[idx] if idx >= 0 else 0\n",
+    "    return array, cdf, threshold, cdf_at_threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases: \n",
+    "        continue\n",
+    "\n",
+    "    ischemia_presence = list(df[df[\"patient_id\"] == patient_id][\"is_ischemic\"])\n",
+    "    is_ischemic = any(ischemia_presence)\n",
+    "\n",
+    "    if is_ischemic:\n",
+    "        print(patient_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ScalarArray_A_Agg_Ischemic = []\n",
+    "ScalarArray_B_Agg_Ischemic = []\n",
+    "\n",
+    "ScalarArray_A_Agg_Nonischemic = []\n",
+    "ScalarArray_B_Agg_Nonischemic = []\n",
+    "\n",
+    "for patient_id in patient_ids:\n",
+    "    if patient_id in Removed_Cases: \n",
+    "        continue\n",
+    "    #print(patient_id)\n",
+    "\n",
+    "    for file in TerritoryLabels:\n",
+    "        if patient_id in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            LabelFile = file\n",
+    "\n",
+    "    for file in MappedVTUFiles:\n",
+    "        if f\"{patient_id}A\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_A = ReadVTUFile(file)\n",
+    "    for file in MappedVTUFiles:#VTUFiles:\n",
+    "        if f\"{patient_id}B\" in os.path.basename(os.path.splitext(file)[0]):\n",
+    "            MBF_B = ReadVTUFile(file)\n",
+    "    \n",
+    "    for i in range(MBF_A.GetPointData().GetNumberOfArrays()):\n",
+    "        arrayname_ = MBF_A.GetPointData().GetArrayName(i)\n",
+    "        if 'scalars' in arrayname_.lower():\n",
+    "            ScalarArray_A_Name = arrayname_\n",
+    "    \n",
+    "    for i in range(MBF_B.GetPointData().GetNumberOfArrays()):\n",
+    "        arrayname_ = MBF_B.GetPointData().GetArrayName(i)\n",
+    "        if 'scalars' in arrayname_.lower():\n",
+    "            ScalarArray_B_Name = arrayname_\n",
+    "    \n",
+    "    MappedScalarArrayName = \"MappedScalar\"\n",
+    "    ScalarArray_A = vtk_to_numpy(MBF_A.GetPointData().GetArray(MappedScalarArrayName))#ScalarArray_A_Name))\n",
+    "    ScalarArray_A_ = ScalarArray_A/np.percentile(ScalarArray_A, 75)\n",
+    "    ScalarArray_B = vtk_to_numpy(MBF_B.GetPointData().GetArray(ScalarArray_B_Name))\n",
+    "    ScalarArray_B_ = ScalarArray_B/np.percentile(ScalarArray_B, 75)\n",
+    "    \n",
+    "\n",
+    "    ischemia_presence = list(df[df[\"patient_id\"] == patient_id][\"is_ischemic\"])\n",
+    "    is_ischemic = any(ischemia_presence)\n",
+    "\n",
+    "\n",
+    "    if is_ischemic:\n",
+    "        ScalarArray_A_Agg_Ischemic.append(ScalarArray_A_)\n",
+    "        ScalarArray_B_Agg_Ischemic.append(ScalarArray_B_)\n",
+    "    else:\n",
+    "        ScalarArray_A_Agg_Nonischemic.append(ScalarArray_A_)\n",
+    "        ScalarArray_B_Agg_Nonischemic.append(ScalarArray_B_)\n",
+    "\n",
+    "    \"\"\"\n",
+    "    array_A, cdf_A, threshold_A, cdf_threshold_A = cumdist(ScalarArray_A_)\n",
+    "    array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(ScalarArray_B_)\"\"\"\n",
+    "\n",
+    "    \"\"\"plt.figure(figsize=(8, 6))\n",
+    "    plt.plot(array_A, cdf_A, color = \"red\", label = \"Pre-CABG\")\n",
+    "    plt.plot(array_B, cdf_B, color = \"green\", label = \"Post-CABG\")\n",
+    "    plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
+    "    \n",
+    "\n",
+    "    #plt.xlim(-100, 500)\n",
+    "    plt.xlim(0, 3)\n",
+    "    plt.xlabel(\"MBF (mL/min/100mL)\", fontsize = 12)\n",
+    "    plt.ylabel(\"Cumulative Distribution Function\")\n",
+    "    plt.legend()\n",
+    "    plt.show()\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_A, cdf_A, threshold_A, cdf_threshold_A = cumdist(np.concatenate(ScalarArray_A_Agg_Ischemic))\n",
+    "array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(np.concatenate(ScalarArray_B_Agg_Ischemic))\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(array_A, cdf_A, color = \"red\", label = \"Pre-CABG\")\n",
+    "plt.plot(array_B, cdf_B, color = \"green\", label = \"Post-CABG\")\n",
+    "plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
+    "\n",
+    "\n",
+    "#plt.xlim(-100, 500)\n",
+    "plt.xlim(0, 2)\n",
+    "plt.title(\"Ischemic Cases (>10% drop)\")\n",
+    "plt.xlabel(\"Index MBF\", fontsize = 12)\n",
+    "plt.ylabel(\"Cumulative Distribution Function (%)\", fontsize = 12)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "array_A, cdf_A, threshold_A, cdf_threshold_A = cumdist(np.concatenate(ScalarArray_A_Agg_Nonischemic))\n",
+    "array_B, cdf_B, threshold_B, cdf_threshold_B = cumdist(np.concatenate(ScalarArray_B_Agg_Nonischemic))\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(array_A, cdf_A, color = \"red\", label = \"Pre-CABG\")\n",
+    "plt.plot(array_B, cdf_B, color = \"green\", label = \"Post-CABG\")\n",
+    "plt.plot([0.8, 0.8], [0, max(cdf_threshold_A, cdf_threshold_B)], 'k--', label = \"cut-off = 0.8\")\n",
+    "\n",
+    "\n",
+    "#plt.xlim(-100, 500)\n",
+    "plt.xlim(0, 2)\n",
+    "plt.title(\"Nonischemic Cases\")\n",
+    "plt.xlabel(\"Index MBF\", fontsize = 12)\n",
+    "plt.ylabel(\"Cumulative Distribution Function (%)\", fontsize = 12)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
