Territory based analysis downstream a stenosis

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -1649,6 +1649,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Territory-Based Analysis Downstream a Stenosis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tags_unique = sorted(set(PatientMetadata[\"stenosis tag\"]))\n",
+    "print(tags_unique)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tags_dataframe = sorted(set(df[\"tag\"]))\n",
+    "print(tags_dataframe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Is ischemic\n",
+    "\n",
+    "LAD_MBF_A = np.concatenate(df[(df[\"tag\"].isin(\"LAD\", \"Diag\")) & (df[\"is_ischemic\"] == True)][\"absMBF_A\"].values)\n",
+    "LAD_MBF_B = np.concatenate(df[(df[\"tag\"].isin(\"LAD\", \"Diag\"))& (df[\"is_ischemic\"] == True)][\"absMBF_B\"].values)\n",
+    "\n",
+    "LCx_MBF_A = np.concatenate(df[(df[\"tag\"].isin([\"LCx\", \"Ramus\", \"OM\"])) & (df[\"is_ischemic\"] == True)][\"absMBF_A\"].values)\n",
+    "LCx_MBF_B = np.concatenate(df[(df[\"tag\"].isin([\"LCx\", \"Ramus\", \"OM\"])) & (df[\"is_ischemic\"] == True)][\"absMBF_B\"].values)\n",
+    "\n",
+    "RCA_MBF_A = np.concatenate(df[(df[\"tag\"].isin([\"PDA\", \"RCA\"])) & (df[\"is_ischemic\"] == True)][\"absMBF_A\"].values)\n",
+    "RCA_MBF_B = np.concatenate(df[(df[\"tag\"].isin([\"PDA\", \"RCA\"])) & (df[\"is_ischemic\"] == True)][\"absMBF_B\"].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Cumulative Distribution Function"
    ]
   },
